[gd_scene load_steps=2 format=3 uid="uid://bl4wlib7utapy"]

[ext_resource type="Script" uid="uid://brkat7pgvdug3" path="res://scenes/novel_system.gd" id="1_07qo2"]

[node name="NovelSystem" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_07qo2")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 6

[node name="characters_container" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="text_panel" type="Panel" parent="."]
custom_minimum_size = Vector2(1024, 200)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="dialogue_text" type="RichTextLabel" parent="text_panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="character_name" type="Label" parent="text_panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="bgm_player" type="AudioStreamPlayer" parent="."]

[node name="sfx_player" type="AudioStreamPlayer" parent="."]
